# nix-install

./: Cargo.toml  README.md  build.rs  nix-search-install-development.sh  nix-search-install.sh
media/.obsidian/: workspace.json
scripts/: nix-search-install.sh
src/: main.rs
